# handmade

./: .gitignore  .gitmodules  CMakeLists.txt
cmake_win32/: FindSDL2.cmake
code/: CMakeLists.txt  build.bat  build.py  build.sh  handmade.cpp  handmade.h  linux_handmade.cpp  sdl_handmade.cpp  win32_handmade.cpp  win32_sdl_handmade.cpp
data/: CMakeLists.txt
misc/: shell.bat
